<resources>
    <string name="app_name">Dokusho App</string>
    <string name="welcome_to_dokusho">読書へよこそ\nWelcome to Dokusho</string>
    <string name="select_level_header">Level Selection</string>
    <string name="select_level">レベルを選んで下さい。\nSelect your reading level.</string>
    <string name="level_1">レベル 一\nLevel 1</string>
    <string name="level_2">レベル 二\nLevel 2</string>
    <string name="level_books_header">Books level header</string>
    <string name="select_a_book">本を選んで下さい。開始すると、ユーザーはひらがなとカタカナと簡単な漢字の読み方をすでに知っているはずです。
        \n\nSelect a book. Once started, users should already know how to read hiragana, katakana, and simple kanji. </string>
    <string name="book_1">Book 1</string>
    <string name="book_title">Book title</string>
    <string name="story_content">Story content here</string>
    <string name="button_1">Answer 1</string>
    <string name="button_2">Answer 2</string>
    <string name="button_3">Answer 3</string>
    <string name="next_page">次 👉</string>
    <string name="previous_page">👈️️ 前</string>
    <string name="owari">終わり</string>
    <string name="the_end">The End</string>
    <string name="return_to_books_menu">メインメニューに戻る\nReturn to Main Menu</string>
    <string name="let_s_read">読んで始め!\nLet\'s read!</string>
    <string name="reading_icon">Reading icon</string>
    <string name="app_explanation">Continuing foreign language skills through reading (starting in Japanese).</string>
    <string name="image_button">Image button for text to speech</string>
</resources>
